--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "antd": "^5.15.2",
         "axios": "^1.6.7",
         "clsx": "^2.1.0",
+        "dayjs": "^1.11.10",
         "formik": "^2.4.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
