--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@ant-design/cssinjs": "^1.18.4",
         "@ant-design/icons": "^5.3.1",
+        "@reduxjs/toolkit": "^2.2.1",
         "@tanstack/react-query": "^5.25.0",
         "antd": "^5.15.2",
         "axios": "^1.6.7",
@@ -20,7 +21,9 @@
         "formik": "^2.4.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
+        "redux": "^5.0.1",
         "tailwind-merge": "^2.2.1",
         "yup": "^1.4.0"
     },
