--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "clsx": "^2.1.0",
         "dayjs": "^1.11.10",
         "formik": "^2.4.5",
+        "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
