--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@ant-design/cssinjs": "^1.18.4",
         "@ant-design/icons": "^5.3.1",
+        "@react-pdf/renderer": "^3.1.14",
         "@reduxjs/toolkit": "^2.2.1",
         "@tanstack/react-query": "^5.25.0",
         "antd": "^5.15.2",
