--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "clsx": "^2.1.0",
         "dayjs": "^1.11.10",
         "formik": "^2.4.5",
+        "jsbarcode": "^3.11.6",
         "jwt-decode": "^4.0.0",
         "react": "^18.2.0",
+        "react-barcode": "^1.5.1",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
