--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "dependencies": {
         "@ant-design/cssinjs": "^1.18.4",
         "@ant-design/icons": "^5.3.1",
+        "@purjayadi/antd-weekly-calendar": "^1.3.8",
         "@react-pdf/renderer": "^3.1.14",
         "@reduxjs/toolkit": "^2.2.1",
         "@tanstack/react-query": "^5.25.0",
         "antd": "^5.15.2",
         "axios": "^1.6.7",
         "clsx": "^2.1.0",
+        "date-fns": "^3.6.0",
         "dayjs": "^1.11.10",
         "formik": "^2.4.5",
         "jsbarcode": "^3.11.6",
