--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
+        "recharts": "^2.12.7",
         "redux": "^5.0.1",
         "redux-thunk": "^3.1.0",
         "tailwind-merge": "^2.2.1",
