--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "react": "^18.2.0",
         "react-barcode": "^1.5.1",
         "react-dom": "^18.2.0",
+        "react-input-mask": "^2.0.4",
+        "react-phone-input-2": "^2.15.1",
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
         "recharts": "^2.12.7",
@@ -40,6 +42,7 @@
         "@types/node": "^20.11.25",
         "@types/react": "^18.2.56",
         "@types/react-dom": "^18.2.19",
+        "@types/react-input-mask": "^3.0.5",
         "@types/uuid": "^9.0.8",
         "@typescript-eslint/eslint-plugin": "^7.0.2",
         "@typescript-eslint/parser": "^7.0.2",
