--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-input-mask": "^2.0.4",
         "react-phone-input-2": "^2.15.1",
         "react-redux": "^9.1.0",
+        "react-responsive": "^10.0.0",
         "react-router-dom": "^6.22.3",
         "recharts": "^2.12.7",
         "redux": "^5.0.1",
