--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "react": "^18.2.0",
         "react-barcode": "^1.5.1",
         "react-dom": "^18.2.0",
+        "react-error-boundary": "^4.0.13",
         "react-input-mask": "^2.0.4",
         "react-phone-input-2": "^2.15.1",
         "react-redux": "^9.1.0",
